# plinky-plonky

./: .gitignore  README.md
blender/: README.md  plinky_plonky.blend  plinky_plonky.stl
software/android/: README.md  settings.gradle.kts
software/android/app/: build.gradle.kts
software/android/app/src/main/: AndroidManifest.xml
software/android/app/src/main/java/org/meades/plinky_plonky/: MainActivity.kt
software/android/app/src/main/java/org/meades/plinky_plonky/ui/theme/: Color.kt  Theme.kt  Type.kt
software/android/app/src/main/res/values/: strings.xml  themes.xml
software/android/app/src/test/java/org/meades/plinky_plonky/: ExampleUnitTest.kt
software/android/gradle/: libs.versions.toml
software/android/gradle/wrapper/: gradle-wrapper.properties
software/esp32/: CMakeLists.txt  README.md  sdkconfig
software/esp32/main/: CMakeLists.txt  Kconfig.projbuild  plinky_plonky.c  tmc2209.c  tmc2209.h
